--- a/app/src/main/res/layout/item_website_row.xml
+++ b/app/src/main/res/layout/item_website_row.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card:cardCornerRadius="5dp"
-    card:cardElevation="5dp"
-    card:cardUseCompatPadding="true">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="4dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_success" />
+            app:srcCompat="@drawable/ic_success" />
 
         <ImageView
             android:id="@+id/btnPause"
@@ -31,7 +31,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginStart="4dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_pause" />
+            app:srcCompat="@drawable/ic_pause" />
 
         <ImageView
             android:id="@+id/btnMore"
@@ -41,7 +41,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="50dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_more" />
+            app:srcCompat="@drawable/ic_more" />
 
         <LinearLayout
             android:id="@+id/layoutContent"
@@ -76,7 +76,7 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
                     tools:text="Title" />
 
 
